--- a/app/src/main/res/layout/fragment_record_audio.xml
+++ b/app/src/main/res/layout/fragment_record_audio.xml
@@ -3,30 +3,28 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context=".screens.record.RecordVideoFragment">
+             tools:context=".screens.record.RecordAudioFragment">
 
-    <SurfaceView
-            android:id="@+id/surfaceView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
     <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_gravity="bottom"
+            android:layout_gravity="center"
     >
         <ImageButton
                 android:id="@+id/btnRecord"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_play_arrow"
+                android:src="@drawable/ic_mic_off"
+                android:layout_marginEnd="32dp"
         />
         <ImageButton
-                android:id="@+id/btnStop"
+                android:id="@+id/btnPlay"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_pause"
+                android:src="@drawable/ic_play_arrow"
         />
+
     </LinearLayout>
 
 </FrameLayout>
