--- a/app/src/main/res/layout/cl_states_end.xml
+++ b/app/src/main/res/layout/cl_states_end.xml
@@ -8,7 +8,16 @@
             android:id="@+id/btnStart"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:text="End"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+    <ProgressBar
+            android:id="@+id/progress"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+    />
 </androidx.constraintlayout.widget.ConstraintLayout>
