--- a/app/src/main/res/layout/cl_states_loading.xml
+++ b/app/src/main/res/layout/cl_states_loading.xml
@@ -13,4 +13,12 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
     />
+    <Button
+            android:id="@+id/btnStart"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:text="Start"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
